--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "cors": "^2.7.1",
     "express": "^4.13.3",
     "express-delay": "^0.2.0",
+    "fast-csv": "^2.4.0",
+    "fs": "0.0.1-security",
     "morgan": "^1.8.0",
     "resource-router-middleware": "^0.6.0"
   },
